# workflow

./: .gitignore  .golangci.yml  .ko.yaml  AGENTS.md  CHANGELOG.md  CICD_PLAN.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION.md  Dockerfile  Dockerfile.admin  Dockerfile.legacy  Makefile  README.md  ROADMAP.md  UI_DOCUMENTATION.md  UI_SCREENSHOTS.html  buf.gen.yaml  buf.yaml  ci.yaml  codecov.yml  consistency_test.go  e2e_execution_test.go  e2e_middleware_negative_test.go  e2e_middleware_test.go  e2e_multi_workflow_test.go  e2e_negative_test.go  engine.go  engine_builder.go  engine_builder_test.go  engine_dependson_plumbing_test.go  engine_iac_provider_preinit_test.go  engine_infra_admin_test.go  engine_kubernetes_backend_external_test.go  engine_kubernetes_backend_test.go  engine_legacy_do_migration_test.go  engine_legacyaws_test.go  engine_manager.go  engine_manager_test.go  (+27 more)
.github/: contract-consumers.json  contract-path-map.json  copilot-instructions.md  public-workflow-action-allowlist.json  public-workflow-authority.json  public-workflow-command-allowlist.json  public-workflow-executable-allowlist.json  public-workflow-presence-allowlist.json
admin/: admin.go  admin_test.go  config.yaml
ai/: ai_test.go  api.go  api_test.go  combined_handler.go  deploy.go  deploy_api.go  deploy_test.go  generator.go  guardrails.go  guardrails_test.go  prompt.go  provider.go  registry.go  registry_test.go  service.go  service_integration_test.go  types.go  validation.go  (+1 more)
sdk/python/: pyproject.toml
sdk/python/workflow_sdk/: __init__.py  client.py  types.py
(+3478 files in other folders)
