[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "workflow-sdk"
version = "0.1.0"
description = "Python client SDK for the GoCodeAlone Workflow engine"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "GoCodeAlone" },
]
keywords = ["workflow", "sdk", "sse", "orchestration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.20",
]

[tool.hatch.build.targets.wheel]
packages = ["workflow_sdk"]
